fix: missing flex-wrap

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -511,6 +511,7 @@ h3 {
 #footer-sections-container {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   justify-content: left;
   margin-top: 25px;
   padding-bottom: 40px;
